# Deep-Learning

./: .gitignore  Accuracy.cpp  Accuracy.h  ActFunc.cpp  ActFunc.h  ActFuncPrime.cpp  ActFuncPrime.h  AllocateMatrix.cpp  AllocateMatrix.h  CMakeLists.txt  DeleteMatrix.cpp  DeleteMatrix.h  GD.cpp  GD.h  GenSet.cpp  GenSet.h  LossFunction.cpp  LossFunction.h  ScalarProduct.cpp  ScalarProduct.h  WriteFunction.cpp  WriteFunction.h  constants.cpp  constants.h  init.cpp  init.h  main.cpp
